# betting

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SECURITY.md
.agents/roles/: deterministic_rust_agents.md  explorer.md  output_writer.md  reviewer.md  risk_manager.md
.agents/workflows/: daily_betting.md
.github/workflows/: daily-report.yml  security-guardrails.yml
docs/: AI_AGENTS.md  ARCHITECTURE.md  CODEX_CHAT_WORKFLOW.md  CONTAINER_HARDENING_BASELINE.md  DEPLOYMENT.md  FOOTBALL_CONTEXT_DATA_PLAN.md  FOOTBALL_DAILY_PICKS_PLAN.md  FOOTBALL_RESEARCH_SOURCE_REVIEW.md  GITHUB_PAGES_SHORTCUT.md  GITHUB_SECURITY_GUARDRAILS.md  LANGGRAPH_EVALUATION.md  MORNING_DELIVERY.md  NETWORK_POLICY.md  NORSK_TIPPING_API_PORTAL.md  OPENAI_API_SETUP.md  OPTIMIZATION_AND_SECURITY_REVIEW.md  SECURITY_ARCHITECTURE.md
examples/: football_research_sources.txt  norsk_tipping_candidates.csv  reference_odds.csv  research_sources.txt  result_settlements.example.jsonl
fixtures/: api_football_fixtures.json  api_football_injuries.json  api_football_league_103_2026.json  api_football_league_104_2026_no_injuries.json  api_football_standings_103_2026.json  api_football_team_331_form.json  api_football_team_332_form.json  the_odds_api_h2h.json
scripts/: daily_betting.sh  publish_static_report.sh  security_static_checks.sh  validate_static_report.sh
src/: cli.rs  domain.rs  football_context.rs  football_data_provider.rs  history.rs  history_pipeline.rs  input.rs  main.rs  notify.rs  reference.rs  reference_provider.rs  report.rs  settlement.rs  team_name.rs  timing.rs
(+44 files in other folders)
