[package]
name = "betting"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-native-certs", "rustls-tls", "smtp-transport"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
